# Build-Configuration-Adjust

./: LICENSE  README.md  configure  configure-extra  configure.ac  test.sh
buildconfiguration/: bca-echo.c  buildconfiguration  buildconfigurationadjust.c  projectconfiguration
extra/: locolisting.outlang
src/: bcadoc.css  config.h.in  config_files.c  config_files_low_level.c  configure.c  conversions.c  convert.c  convert.h  convert_csource.c  convert_screenlog.c  documents.c  gmakefile.c  graphviz.c  graphviz_out.c  gtk.c  hyphenation_engine.c  locodoc.h  locolisting.c  main.c  make_colorize.c  make_embedded_files.sh.in  makefile_out.c  newt.c  passthrough_engine.c  plaintext.c  plaintext.h  plaintext_engine.c  project_config_files.c  prototypes.h  replace.c  selftest.c  sfdstub.c  sfdstub.c.in  spawn.c  strings.c  utf8_word_engine.c  www.c
